--- a/genetic_algo.ipynb
+++ b/genetic_algo.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,30 @@
     "frames[0].save('png_to_gif.gif', format='GIF',\n",
     "               append_images=frames[1:],\n",
     "               save_all=True,\n",
-    "               duration=500, loop=0)"
+    "               duration=200, loop=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import glob\n",
+    "\n",
+    "# Create the frames\n",
+    "frames = []\n",
+    "imgs = glob.glob(\"./images2/*.png\")\n",
+    "for i in imgs:\n",
+    "    new_frame = Image.open(i)\n",
+    "    frames.append(new_frame)\n",
+    "\n",
+    "# Save into a GIF file that loops forever\n",
+    "frames[0].save('png_to_gif.gif', format='GIF',\n",
+    "               append_images=frames[1:],\n",
+    "               save_all=True,\n",
+    "               duration=200, loop=0)"
    ]
   }
  ],
