--- a/codes/baseline.ipynb
+++ b/codes/baseline.ipynb
@@ -430,31 +430,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2.3905277252197266,\n",
-       " 2.2784535884857178,\n",
-       " 2.2564857006073,\n",
-       " 2.186492919921875,\n",
-       " 2.0040955543518066,\n",
-       " 1.6344726085662842,\n",
-       " 1.0322356224060059,\n",
-       " 0.5761099457740784,\n",
-       " 0.313981294631958,\n",
-       " 0.20123204588890076]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "H1.history['loss']"
+    "H1.history['loss']\n",
+    "np.savetxt('h1history.txt', H1.history['loss'])"
    ]
   },
   {
