Add mnist fashion

--- a/codes/plt_baseline.ipynb
+++ b/codes/plt_baseline.ipynb
@@ -76,6 +76,37 @@
     "circ = random_circuit(4, 10, measure=True)\n",
     "circ.draw(output='mpl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accs = np.asarray(np.loadtxt('exps/h1history_accuracy.txt'))\n",
+    "print()\n",
+    "plt.plot(range(1, 31), np.mean(accs, axis = 0), 'k-')\n",
+    "plt.fill_between(range(1, 31), np.mean(accs, axis = 0) - np.std(accs, axis = 0), np.mean(accs, axis = 0) + np.std(accs, axis = 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8. Vẽ đồ thị loss, accuracy của traning set và validation set\n",
+    "fig = plt.figure()\n",
+    "numOfEpoch = 20\n",
+    "plt.plot(np.arange(0, numOfEpoch), H3.history['loss'], label='training loss')\n",
+    "plt.plot(np.arange(0, numOfEpoch), H3.history['val_loss'], label='validation loss')\n",
+    "plt.plot(np.arange(0, numOfEpoch), H3.history['accuracy'], label='accuracy')\n",
+    "plt.plot(np.arange(0, numOfEpoch), H3.history['val_accuracy'], label='validation accuracy')\n",
+    "plt.title('Accuracy and Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss|Accuracy')\n",
+    "plt.legend()"
+   ]
   }
  ],
  "metadata": {
