Update multifilter quanv layer

--- a/codes/plt_baseline.ipynb
+++ b/codes/plt_baseline.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,31 +199,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0.9946666717529297,\n",
-       " 0.9965416699647903,\n",
-       " 0.9898750096559524,\n",
-       " 0.9899166762828827,\n",
-       " 0.9924583405256271,\n",
-       " 0.9916666746139526,\n",
-       " 0.9931250065565109,\n",
-       " 0.9942500054836273,\n",
-       " 0.9940000057220459,\n",
-       " 0.9933750063180924]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "exps_mnist_fashion/h2_2x2filter/h2history_accuracy.txt not found.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\haime\\OneDrive\\Documents\\GitHub\\GeneticCircuit\\codes\\plt_baseline.ipynb Cell 7\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/haime/OneDrive/Documents/GitHub/GeneticCircuit/codes/plt_baseline.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m quanv_num \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m19\u001b[39m))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/haime/OneDrive/Documents/GitHub/GeneticCircuit/codes/plt_baseline.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m accs_h2_2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(np\u001b[39m.\u001b[39;49mloadtxt(\u001b[39m'\u001b[39;49m\u001b[39mexps_mnist_fashion/h2_2x2filter/h2history_accuracy.txt\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/haime/OneDrive/Documents/GitHub/GeneticCircuit/codes/plt_baseline.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m accs_h2_4_quanv \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(np\u001b[39m.\u001b[39mloadtxt(\u001b[39m'\u001b[39m\u001b[39mexps_mnist_fashion/h2_4x4filter_quanv/h2history_accuracy.txt\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/haime/OneDrive/Documents/GitHub/GeneticCircuit/codes/plt_baseline.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m accuracies_h2\u001b[39m.\u001b[39mappend(np\u001b[39m.\u001b[39mmax(np\u001b[39m.\u001b[39mmean(accs_h2_2, axis \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m)))\n",
+      "File \u001b[1;32mc:\\Users\\haime\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\numpy\\lib\\npyio.py:1042\u001b[0m, in \u001b[0;36mloadtxt\u001b[1;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, like)\u001b[0m\n\u001b[0;32m   1040\u001b[0m     fname \u001b[39m=\u001b[39m os_fspath(fname)\n\u001b[0;32m   1041\u001b[0m \u001b[39mif\u001b[39;00m _is_string_like(fname):\n\u001b[1;32m-> 1042\u001b[0m     fh \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mlib\u001b[39m.\u001b[39;49m_datasource\u001b[39m.\u001b[39;49mopen(fname, \u001b[39m'\u001b[39;49m\u001b[39mrt\u001b[39;49m\u001b[39m'\u001b[39;49m, encoding\u001b[39m=\u001b[39;49mencoding)\n\u001b[0;32m   1043\u001b[0m     fencoding \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(fh, \u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m   1044\u001b[0m     line_iter \u001b[39m=\u001b[39m \u001b[39miter\u001b[39m(fh)\n",
+      "File \u001b[1;32mc:\\Users\\haime\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\numpy\\lib\\_datasource.py:193\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[0;32m    156\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    157\u001b[0m \u001b[39mOpen `path` with `mode` and return the file object.\u001b[39;00m\n\u001b[0;32m    158\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    189\u001b[0m \n\u001b[0;32m    190\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    192\u001b[0m ds \u001b[39m=\u001b[39m DataSource(destpath)\n\u001b[1;32m--> 193\u001b[0m \u001b[39mreturn\u001b[39;00m ds\u001b[39m.\u001b[39;49mopen(path, mode, encoding\u001b[39m=\u001b[39;49mencoding, newline\u001b[39m=\u001b[39;49mnewline)\n",
+      "File \u001b[1;32mc:\\Users\\haime\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\numpy\\lib\\_datasource.py:532\u001b[0m, in \u001b[0;36mDataSource.open\u001b[1;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[0;32m    529\u001b[0m     \u001b[39mreturn\u001b[39;00m _file_openers[ext](found, mode\u001b[39m=\u001b[39mmode,\n\u001b[0;32m    530\u001b[0m                               encoding\u001b[39m=\u001b[39mencoding, newline\u001b[39m=\u001b[39mnewline)\n\u001b[0;32m    531\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 532\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpath\u001b[39m}\u001b[39;00m\u001b[39m not found.\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: exps_mnist_fashion/h2_2x2filter/h2history_accuracy.txt not found."
+     ]
     }
    ],
    "source": [
-    "accuracies_h2"
+    "quanv_num = list(range(1, 19))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('exps_mnist_fashion/h2_2x2filter/h2history_accuracy.txt'))\n",
+    "accs_h2_4_quanv = np.asarray(np.loadtxt('exps_mnist_fashion/h2_4x4filter_quanv/h2history_accuracy.txt'))\n",
+    "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
+    "accuracies_h2.append(np.max(np.mean(accs_h2_4_quanv, axis = 0)))\n",
+    "for i in quanv_num:\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('exps_mnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
+    "plt.plot(range(-1, len(quanv_num) + 1), accuracies_h2, '-bo', label = 'H2')\n"
    ]
   },
   {
