Update save path

--- a/codes/plt_baseline.ipynb
+++ b/codes/plt_baseline.ipynb
@@ -57,15 +57,15 @@
     "filters = [1, 20, 50]\n",
     "\n",
     "for num_filter in filters:\n",
-    "    accs_h1 = np.asarray(np.loadtxt('exps_mnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
+    "    accs_h1 = np.asarray(np.loadtxt('mnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
     "    plt.plot(range(1, 101), np.mean(accs_h1, axis = 0), 'k-')\n",
     "    plt.fill_between(range(1, 101), np.mean(accs_h1, axis = 0) - np.std(accs_h1, axis = 0), np.mean(accs_h1, axis = 0) + np.std(accs_h1, axis = 0), label = 'H1 ' + str(num_filter) +' filter')\n",
     "\n",
-    "accs_h2 = np.asarray(np.loadtxt('exps_mnist/h2_4x4filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2 = np.asarray(np.loadtxt('mnist/h2_4x4filter_quanv0/h2history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h2, axis = 0), 'k-')\n",
     "plt.fill_between(range(1, 101), np.mean(accs_h2, axis = 0) - np.std(accs_h2, axis = 0), np.mean(accs_h2, axis = 0) + np.std(accs_h2, axis = 0), label = 'H2')\n",
     "\n",
-    "accs_h3 = np.asarray(np.loadtxt('exps_mnist/h3/h3history_accuracy.txt'))\n",
+    "accs_h3 = np.asarray(np.loadtxt('mnist/h3/h3history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h3, axis = 0), 'k-')\n",
     "plt.fill_between(range(1, 101), np.mean(accs_h3, axis = 0) - np.std(accs_h3, axis = 0), np.mean(accs_h3, axis = 0) + np.std(accs_h3, axis = 0), label = 'H3')\n",
     "\n",
@@ -106,15 +106,15 @@
     "filters = [1, 20, 50]\n",
     "\n",
     "for num_filter in filters:\n",
-    "    accs_h1 = np.asarray(np.loadtxt('exps_mnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
+    "    accs_h1 = np.asarray(np.loadtxt('mnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
     "    plt.plot(range(1, 101), np.mean(accs_h1, axis = 0), label = '$H_1$ (' + str(num_filter) +' filters)')\n",
     "    plt.fill_between(range(1, 101), np.mean(accs_h1, axis = 0) - np.std(accs_h1, axis = 0), np.mean(accs_h1, axis = 0) + np.std(accs_h1, axis = 0), alpha = 0.2)\n",
     "    print(np.mean(accs_h1, axis = 0)[-1])\n",
-    "accs_h2 = np.asarray(np.loadtxt('exps_mnist/h2_4filter4x4/h2history_accuracy.txt'))\n",
+    "accs_h2 = np.asarray(np.loadtxt('mnist/h2_4filter4x4/h2history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h2, axis = 0), label = '$H_2$ (4 filters)')\n",
     "plt.fill_between(range(1, 101), np.mean(accs_h2, axis = 0) - np.std(accs_h2, axis = 0), np.mean(accs_h2, axis = 0) + np.std(accs_h2, axis = 0), alpha = 0.2)\n",
     "\n",
-    "accs_h3 = np.asarray(np.loadtxt('exps_mnist/h3/h3history_accuracy.txt'))\n",
+    "accs_h3 = np.asarray(np.loadtxt('mnist/h3/h3history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h3, axis = 0), label = '$H_3$')\n",
     "plt.fill_between(range(1, 101), np.mean(accs_h3, axis = 0) - np.std(accs_h3, axis = 0), np.mean(accs_h3, axis = 0) + np.std(accs_h3, axis = 0), alpha = 0.2)\n",
     "\n",
@@ -175,15 +175,15 @@
     "filters = [1, 20, 50]\n",
     "\n",
     "for num_filter in filters:\n",
-    "    accs_h1 = np.asarray(np.loadtxt('exps_mnist_fashion/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
+    "    accs_h1 = np.asarray(np.loadtxt('fmnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
     "    plt.plot(range(1, 101), np.mean(accs_h1, axis = 0), label = '$H_1$ (' + str(num_filter) +' filters)')\n",
     "    plt.fill_between(range(1, 101), np.mean(accs_h1, axis = 0) - np.std(accs_h1, axis = 0), np.mean(accs_h1, axis = 0) + np.std(accs_h1, axis = 0), alpha = 0.2)\n",
     "    print(np.mean(accs_h1, axis = 0)[-1])\n",
-    "accs_h2 = np.asarray(np.loadtxt('exps_mnist_fashion/h2_4filter4x4/h2history_accuracy.txt'))\n",
+    "accs_h2 = np.asarray(np.loadtxt('fmnist/h2_4filter4x4/h2history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h2, axis = 0), label = '$H_2$ (4 filters)')\n",
     "plt.fill_between(range(1, 101), np.mean(accs_h2, axis = 0) - np.std(accs_h2, axis = 0), np.mean(accs_h2, axis = 0) + np.std(accs_h2, axis = 0), alpha = 0.2)\n",
     "\n",
-    "accs_h3 = np.asarray(np.loadtxt('exps_mnist_fashion/h3/h3history_accuracy.txt'))\n",
+    "accs_h3 = np.asarray(np.loadtxt('fmnist/h3/h3history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h3, axis = 0), label = '$H_3$')\n",
     "plt.fill_between(range(1, 101), np.mean(accs_h3, axis = 0) - np.std(accs_h3, axis = 0), np.mean(accs_h3, axis = 0) + np.std(accs_h3, axis = 0), alpha = 0.2)\n",
     "\n",
@@ -245,13 +245,13 @@
     "filters = [1, 20, 50]\n",
     "\n",
     "for num_filter in filters:\n",
-    "    accs_h1 = np.asarray(np.loadtxt('exps_mnist_fashion/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
+    "    accs_h1 = np.asarray(np.loadtxt('fmnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
     "    plt.plot(range(1, 101), np.mean(accs_h1, axis = 0), label = 'H1 ' + str(num_filter) +' filter')\n",
     "\n",
     "accs_h2 = np.asarray(np.loadtxt('compare_type_quanv/h2_4x4filter_quanv0/h2history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h2, axis = 0), label = 'H2')\n",
     "\n",
-    "accs_h3 = np.asarray(np.loadtxt('exps_mnist_fashion/h3/h3history_accuracy.txt'))\n",
+    "accs_h3 = np.asarray(np.loadtxt('fmnist/h3/h3history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h3, axis = 0), label = 'H3')\n",
     "\n",
     "plt.xlabel('# epochs')\n",
@@ -500,7 +500,7 @@
     "i = 0\n",
     "accuracies_h2, accuracies_h1 = [], []\n",
     "for num_filter in num_filters:\n",
-    "    accs_h1 = np.asarray(np.loadtxt('exps_mnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
+    "    accs_h1 = np.asarray(np.loadtxt('mnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
     "    accs_h2 = np.asarray(np.loadtxt('compare_num_quanv/' + str(num_filter) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h1.append(np.max(np.mean(accs_h1, axis = 0)))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2, axis = 0)))\n",
@@ -537,7 +537,7 @@
     "i = 0\n",
     "accuracies_h2, accuracies_h1 = [], []\n",
     "for num_filter in num_filters:\n",
-    "    accs_h1 = np.asarray(np.loadtxt('exps_mnist_fashion/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
+    "    accs_h1 = np.asarray(np.loadtxt('fmnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
     "    accs_h2 = np.asarray(np.loadtxt('compare_num_quanv_fashion/' + str(num_filter) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h1.append(np.max(np.mean(accs_h1, axis = 0)))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2, axis = 0)))\n",
@@ -574,8 +574,8 @@
     "i = 0\n",
     "accuracies_h2, accuracies_h1 = [], []\n",
     "for size in size_filters:\n",
-    "    accs_h1 = np.asarray(np.loadtxt('exps_mnist/h1_4filter' + str(size) + 'x' + str(size) + '/h1history_accuracy.txt'))\n",
-    "    accs_h2 = np.asarray(np.loadtxt('exps_mnist/h2_4filter' + str(size) + 'x' + str(size) + '/h2history_accuracy.txt'))\n",
+    "    accs_h1 = np.asarray(np.loadtxt('mnist/h1_4filter' + str(size) + 'x' + str(size) + '/h1history_accuracy.txt'))\n",
+    "    accs_h2 = np.asarray(np.loadtxt('mnist/h2_4filter' + str(size) + 'x' + str(size) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h1.append(np.max(np.mean(accs_h1, axis = 0)))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2, axis = 0)))\n",
     "\n",
@@ -612,8 +612,8 @@
     "i = 0\n",
     "accuracies_h2, accuracies_h1 = [], []\n",
     "for size in size_filters:\n",
-    "    accs_h1 = np.asarray(np.loadtxt('exps_mnist_fashion/h1_4filter' + str(size) + 'x' + str(size) + '/h1history_accuracy.txt'))\n",
-    "    accs_h2 = np.asarray(np.loadtxt('exps_mnist_fashion/h2_4filter' + str(size) + 'x' + str(size) + '/h2history_accuracy.txt'))\n",
+    "    accs_h1 = np.asarray(np.loadtxt('fmnist/h1_4filter' + str(size) + 'x' + str(size) + '/h1history_accuracy.txt'))\n",
+    "    accs_h2 = np.asarray(np.loadtxt('fmnist/h2_4filter' + str(size) + 'x' + str(size) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h1.append(np.max(np.mean(accs_h1, axis = 0)))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2, axis = 0)))\n",
     "\n",
