--- a/codes/plt_baseline copy 2.ipynb
+++ b/codes/plt_baseline copy 2.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
     "    accs_h1 = np.asarray(np.loadtxt('cifar10_fashion/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
     "    plt.plot(range(1, 101), np.mean(accs_h1, axis = 0), label = 'H1 ' + str(num_filter) +' filter')\n",
     "\n",
-    "accs_h2 = np.asarray(np.loadtxt('compare_type_quanv/h2_4x4filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2 = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_4x4filter_quanv0/h2history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h2, axis = 0), label = 'H2')\n",
     "\n",
     "accs_h3 = np.asarray(np.loadtxt('cifar10_fashion/h3/h3history_accuracy.txt'))\n",
@@ -307,10 +307,10 @@
     "accuracies_h2 = []\n",
     "  \n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "plt.plot(range(-1, len(quanv_num)), accuracies_h2, '-ro', label = \"MNIST\")\n",
     "\n",
@@ -318,10 +318,10 @@
     "accuracies_h2 = []\n",
     "  \n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "plt.plot(range(-1, len(quanv_num)), accuracies_h2, color = 'orange', marker = 'o', label = 'MNIST Fashion')\n",
     "\n",
@@ -331,7 +331,7 @@
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.yticks(np.arange(0.9, 1.04, step=0.02))\n",
-    "plt.savefig(\"compare_type_quanv.svg\", format = \"svg\", dpi = 1000)"
+    "plt.savefig(\"compare_type_quanv_mnist.svg\", format = \"svg\", dpi = 1000)"
    ]
   },
   {
@@ -364,10 +364,10 @@
     "accuracies_h2 = []\n",
     "  \n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "\n",
     "sorted_index = (np.asarray(accuracies_h2)).argsort()[:][::-1]\n",
@@ -383,11 +383,11 @@
     "accuracies_h2 = []\n",
     "  \n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "    \n",
     "sorted_index = (np.asarray(accuracies_h2)).argsort()[:][::-1]\n",
@@ -401,7 +401,7 @@
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.yticks(np.arange(0.9, 1.03, step=0.02))\n",
-    "plt.savefig(\"compare_type_quanv.svg\", format = \"svg\", dpi = 1000)\n",
+    "plt.savefig(\"compare_type_quanv_mnist.svg\", format = \"svg\", dpi = 1000)\n",
     "\n"
    ]
   },
@@ -436,10 +436,10 @@
     "plt.rcParams['xtick.bottom'] = plt.rcParams['xtick.labelbottom'] = False\n",
     "plt.rcParams['xtick.top'] = plt.rcParams['xtick.labeltop'] = True\n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "\n",
     "sorted_index = (np.asarray(accuracies_h2)).argsort()[:][::-1]\n",
@@ -454,7 +454,7 @@
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.yticks(np.arange(0.9, 1.04, step=0.02))\n",
-    "plt.savefig(\"compare_type_quanv2.svg\", format = \"svg\", dpi = 1000)"
+    "plt.savefig(\"compare_type_quanv_mnist2.svg\", format = \"svg\", dpi = 1000)"
    ]
   },
   {
@@ -479,10 +479,10 @@
     "i = 0\n",
     "accuracies_h2 = []\n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "plt.plot(range(-1, len(quanv_num)), accuracies_h2, color = 'orange', marker = 'o', label = 'MNIST Fashion')\n",
     "\n",
@@ -491,7 +491,7 @@
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.yticks(np.arange(0.9, 1.04, step=0.02))\n",
-    "plt.savefig(\"compare_type_quanv_fashion.svg\", format = \"svg\", dpi = 1000)"
+    "plt.savefig(\"compare_type_quanv_fmnist.svg\", format = \"svg\", dpi = 1000)"
    ]
   },
   {
@@ -648,47 +648,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "cifar10/h2_20filter2x2/h2history_accuracy.txt not found.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[43], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m accs_h2, accuracies_h2 \u001b[39m=\u001b[39m [], []\n\u001b[1;32m      4\u001b[0m \u001b[39m#accs_h1 = np.asarray(np.loadtxt('compare_num_quanv/h1_50filter' + str(size) + 'x' + str(size) + '/h1history_accuracy.txt'))\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m accs_h2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(np\u001b[39m.\u001b[39;49mloadtxt(\u001b[39m'\u001b[39;49m\u001b[39mcifar10/h2_20filter2x2/h2history_accuracy.txt\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[1;32m      6\u001b[0m accuracies_h1\u001b[39m.\u001b[39mappend(np\u001b[39m.\u001b[39mmax(np\u001b[39m.\u001b[39mmean(accs_h1, axis \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m)))\n\u001b[1;32m      7\u001b[0m accuracies_h2\u001b[39m.\u001b[39mappend(np\u001b[39m.\u001b[39mmax(np\u001b[39m.\u001b[39mmean(accs_h2, axis \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m)))\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/numpy/lib/npyio.py:1348\u001b[0m, in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, quotechar, like)\u001b[0m\n\u001b[1;32m   1345\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(delimiter, \u001b[39mbytes\u001b[39m):\n\u001b[1;32m   1346\u001b[0m     delimiter \u001b[39m=\u001b[39m delimiter\u001b[39m.\u001b[39mdecode(\u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m-> 1348\u001b[0m arr \u001b[39m=\u001b[39m _read(fname, dtype\u001b[39m=\u001b[39;49mdtype, comment\u001b[39m=\u001b[39;49mcomment, delimiter\u001b[39m=\u001b[39;49mdelimiter,\n\u001b[1;32m   1349\u001b[0m             converters\u001b[39m=\u001b[39;49mconverters, skiplines\u001b[39m=\u001b[39;49mskiprows, usecols\u001b[39m=\u001b[39;49musecols,\n\u001b[1;32m   1350\u001b[0m             unpack\u001b[39m=\u001b[39;49munpack, ndmin\u001b[39m=\u001b[39;49mndmin, encoding\u001b[39m=\u001b[39;49mencoding,\n\u001b[1;32m   1351\u001b[0m             max_rows\u001b[39m=\u001b[39;49mmax_rows, quote\u001b[39m=\u001b[39;49mquotechar)\n\u001b[1;32m   1353\u001b[0m \u001b[39mreturn\u001b[39;00m arr\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/numpy/lib/npyio.py:975\u001b[0m, in \u001b[0;36m_read\u001b[0;34m(fname, delimiter, comment, quote, imaginary_unit, usecols, skiplines, max_rows, converters, ndmin, unpack, dtype, encoding)\u001b[0m\n\u001b[1;32m    973\u001b[0m     fname \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mfspath(fname)\n\u001b[1;32m    974\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(fname, \u001b[39mstr\u001b[39m):\n\u001b[0;32m--> 975\u001b[0m     fh \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mlib\u001b[39m.\u001b[39;49m_datasource\u001b[39m.\u001b[39;49mopen(fname, \u001b[39m'\u001b[39;49m\u001b[39mrt\u001b[39;49m\u001b[39m'\u001b[39;49m, encoding\u001b[39m=\u001b[39;49mencoding)\n\u001b[1;32m    976\u001b[0m     \u001b[39mif\u001b[39;00m encoding \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    977\u001b[0m         encoding \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(fh, \u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mlatin1\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/numpy/lib/_datasource.py:193\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    157\u001b[0m \u001b[39mOpen `path` with `mode` and return the file object.\u001b[39;00m\n\u001b[1;32m    158\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    189\u001b[0m \n\u001b[1;32m    190\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    192\u001b[0m ds \u001b[39m=\u001b[39m DataSource(destpath)\n\u001b[0;32m--> 193\u001b[0m \u001b[39mreturn\u001b[39;00m ds\u001b[39m.\u001b[39;49mopen(path, mode, encoding\u001b[39m=\u001b[39;49mencoding, newline\u001b[39m=\u001b[39;49mnewline)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/numpy/lib/_datasource.py:533\u001b[0m, in \u001b[0;36mDataSource.open\u001b[0;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[1;32m    530\u001b[0m     \u001b[39mreturn\u001b[39;00m _file_openers[ext](found, mode\u001b[39m=\u001b[39mmode,\n\u001b[1;32m    531\u001b[0m                               encoding\u001b[39m=\u001b[39mencoding, newline\u001b[39m=\u001b[39mnewline)\n\u001b[1;32m    532\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 533\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mFileNotFoundError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpath\u001b[39m}\u001b[39;00m\u001b[39m not found.\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: cifar10/h2_20filter2x2/h2history_accuracy.txt not found."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "size = 4\n",
     "accs_h1, accuracies_h1 = [], []\n",
     "accs_h2, accuracies_h2 = [], []\n",
     "#accs_h1 = np.asarray(np.loadtxt('compare_num_quanv/h1_50filter' + str(size) + 'x' + str(size) + '/h1history_accuracy.txt'))\n",
-    "accs_h2 = np.asarray(np.loadtxt('cifar10/h2_20filter2x2/h2history_accuracy.txt'))\n",
+    "accs_h2 = np.asarray(np.loadtxt('mnist/h2_4filter5x5/h2history_accuracy.txt'))\n",
     "accuracies_h1.append(np.max(np.mean(accs_h1, axis = 0)))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2, axis = 0)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.996000000834465]"
+       "[0.41666666567325594]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
