--- a/codes/plt_baseline.ipynb
+++ b/codes/plt_baseline.ipynb
@@ -248,7 +248,7 @@
     "    accs_h1 = np.asarray(np.loadtxt('fmnist/h1_' + str(num_filter) + 'filter/h1history_accuracy.txt'))\n",
     "    plt.plot(range(1, 101), np.mean(accs_h1, axis = 0), label = 'H1 ' + str(num_filter) +' filter')\n",
     "\n",
-    "accs_h2 = np.asarray(np.loadtxt('compare_type_quanv/h2_4x4filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2 = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_4x4filter_quanv0/h2history_accuracy.txt'))\n",
     "plt.plot(range(1, 101), np.mean(accs_h2, axis = 0), label = 'H2')\n",
     "\n",
     "accs_h3 = np.asarray(np.loadtxt('fmnist/h3/h3history_accuracy.txt'))\n",
@@ -290,10 +290,10 @@
     "accuracies_h2 = []\n",
     "  \n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "plt.plot(range(-1, len(quanv_num)), accuracies_h2, '-ro', label = \"MNIST\")\n",
     "\n",
@@ -301,10 +301,10 @@
     "accuracies_h2 = []\n",
     "  \n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "plt.plot(range(-1, len(quanv_num)), accuracies_h2, color = 'orange', marker = 'o', label = 'MNIST Fashion')\n",
     "\n",
@@ -314,7 +314,7 @@
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.yticks(np.arange(0.9, 1.04, step=0.02))\n",
-    "plt.savefig(\"compare_type_quanv.svg\", format = \"svg\", dpi = 1000)"
+    "plt.savefig(\"compare_type_quanv_mnist.svg\", format = \"svg\", dpi = 1000)"
    ]
   },
   {
@@ -347,10 +347,10 @@
     "accuracies_h2 = []\n",
     "  \n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "\n",
     "sorted_index = (np.asarray(accuracies_h2)).argsort()[:][::-1]\n",
@@ -366,11 +366,11 @@
     "accuracies_h2 = []\n",
     "  \n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "    \n",
     "sorted_index = (np.asarray(accuracies_h2)).argsort()[:][::-1]\n",
@@ -384,7 +384,7 @@
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.yticks(np.arange(0.9, 1.03, step=0.02))\n",
-    "plt.savefig(\"compare_type_quanv.svg\", format = \"svg\", dpi = 1000)\n",
+    "plt.savefig(\"compare_type_quanv_mnist.svg\", format = \"svg\", dpi = 1000)\n",
     "\n"
    ]
   },
@@ -419,10 +419,10 @@
     "plt.rcParams['xtick.bottom'] = plt.rcParams['xtick.labelbottom'] = False\n",
     "plt.rcParams['xtick.top'] = plt.rcParams['xtick.labeltop'] = True\n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_mnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "\n",
     "sorted_index = (np.asarray(accuracies_h2)).argsort()[:][::-1]\n",
@@ -437,7 +437,7 @@
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.yticks(np.arange(0.9, 1.04, step=0.02))\n",
-    "plt.savefig(\"compare_type_quanv2.svg\", format = \"svg\", dpi = 1000)"
+    "plt.savefig(\"compare_type_quanv_mnist2.svg\", format = \"svg\", dpi = 1000)"
    ]
   },
   {
@@ -462,10 +462,10 @@
     "i = 0\n",
     "accuracies_h2 = []\n",
     "quanv_num = list(range(0, 20))\n",
-    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
+    "accs_h2_2 = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_2x2filter_quanv0/h2history_accuracy.txt'))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2_2, axis = 0)))\n",
     "for i in quanv_num:\n",
-    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fashion/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
+    "    accs_h2_4_quanvx = np.asarray(np.loadtxt('compare_type_quanv_fmnist/h2_4x4filter_quanv' + str(i) + '/h2history_accuracy.txt'))\n",
     "    accuracies_h2.append(np.max(np.mean(accs_h2_4_quanvx, axis = 0)))\n",
     "plt.plot(range(-1, len(quanv_num)), accuracies_h2, color = 'orange', marker = 'o', label = 'MNIST Fashion')\n",
     "\n",
@@ -474,7 +474,7 @@
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
     "plt.yticks(np.arange(0.9, 1.04, step=0.02))\n",
-    "plt.savefig(\"compare_type_quanv_fashion.svg\", format = \"svg\", dpi = 1000)"
+    "plt.savefig(\"compare_type_quanv_fmnist.svg\", format = \"svg\", dpi = 1000)"
    ]
   },
   {
@@ -671,7 +671,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -685,12 +685,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9 (v3.10.9:1dd9be6584, Dec  6 2022, 14:37:36) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b6314cf850edbae231b80224200c9e1580e03453e86236ed42ea1b49b1f8d2e3"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
