Update padding strategy

--- a/codes/plt_baseline copy 2.ipynb
+++ b/codes/plt_baseline copy 2.ipynb
@@ -648,37 +648,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9772]\n",
+      "[0.9518]\n"
+     ]
+    }
+   ],
    "source": [
     "size = 4\n",
     "accs_h1, accuracies_h1 = [], []\n",
     "accs_h2, accuracies_h2 = [], []\n",
-    "#accs_h1 = np.asarray(np.loadtxt('compare_num_quanv/h1_50filter' + str(size) + 'x' + str(size) + '/h1history_accuracy.txt'))\n",
-    "accs_h2 = np.asarray(np.loadtxt('mnist/h2_4filter5x5/h2history_accuracy.txt'))\n",
+    "accs_h1 = np.asarray(np.loadtxt('cifar10/h1_4filter2x2/h1history_accuracy.txt'))\n",
+    "accs_h2 = np.asarray(np.loadtxt('cifar10/h1_4filter3x3/h1history_accuracy.txt'))\n",
     "accuracies_h1.append(np.max(np.mean(accs_h1, axis = 0)))\n",
-    "accuracies_h2.append(np.max(np.mean(accs_h2, axis = 0)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.41666666567325594]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracies_h2"
+    "accuracies_h2.append(np.max(np.mean(accs_h2, axis = 0)))\n",
+    "print(np.round(accuracies_h1, 4))\n",
+    "print(np.round(accuracies_h2, 4))"
    ]
   },
   {
