--- a/codes/plt_baseline copy 2.ipynb
+++ b/codes/plt_baseline copy 2.ipynb
@@ -648,15 +648,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.9772]\n",
-      "[0.9518]\n"
+      "[0.9727]\n",
+      "[0.6233]\n"
      ]
     }
    ],
@@ -664,12 +664,32 @@
     "size = 4\n",
     "accs_h1, accuracies_h1 = [], []\n",
     "accs_h2, accuracies_h2 = [], []\n",
-    "accs_h1 = np.asarray(np.loadtxt('cifar10/h1_4filter2x2/h1history_accuracy.txt'))\n",
-    "accs_h2 = np.asarray(np.loadtxt('cifar10/h1_4filter3x3/h1history_accuracy.txt'))\n",
+    "accs_h1 = np.asarray(np.loadtxt('fmnist/h2_20filter2x2/h2history_accuracy.txt'))\n",
+    "accs_h2 = np.asarray(np.loadtxt('cifar10/h2_4filter4x4/h2history_accuracy.txt'))\n",
     "accuracies_h1.append(np.max(np.mean(accs_h1, axis = 0)))\n",
     "accuracies_h2.append(np.max(np.mean(accs_h2, axis = 0)))\n",
     "print(np.round(accuracies_h1, 4))\n",
     "print(np.round(accuracies_h2, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9549999833106995"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(accs_h1)"
    ]
   },
   {
